...
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="47dp"
        android:text="What is start time of class?"
        android:textColor="#101010"
        android:textColorHint="#121212"
        app:layout_constraintBottom_toTopOf="@+id/EndClassTime"
        app:layout_constraintEnd_toStartOf="@+id/EditStartTime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EndClassTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="43dp"
        android:hint="hour_min"
        android:text="What is end time of class?"
        android:textColor="#0C0C0C"
        android:textColorHint="#101010"
        app:layout_constraintBottom_toTopOf="@+id/MonD"
        app:layout_constraintEnd_toStartOf="@+id/EditEndTime"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EditStartTime"
        android:layout_width="0dp"
        android:layout_height="45dp"
...
        android:layout_marginBottom="166dp"
        android:background="@drawable/rectangle_layout"
        android:ems="10"
        android:hint="HH:MM"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/Finalize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EndClassTime"
        app:layout_constraintTop_toBottomOf="@+id/YrEnd"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/MonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:minHeight="48dp"
        android:text="mon"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TueD" />

    <CheckBox
...
        android:textColor="#4CAF50"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/SatD"
        app:layout_constraintEnd_toEndOf="@+id/SatD" />

    <CheckBox
        android:id="@+id/WedD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="wed"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/SunD"
        app:layout_constraintStart_toStartOf="@+id/SunD" />

    <CheckBox
...
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/EditEndTime"
        app:layout_constraintTop_toBottomOf="@+id/EditEndTime" />

    <CheckBox
        android:id="@+id/FriD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:minHeight="48dp"
        android:text="fri"
        android:textColor="#FF5722"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/MonD"
        app:layout_constraintTop_toBottomOf="@+id/MonD" />

    <CheckBox
...
    <Button
        android:id="@+id/Finalize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="16dp"
        android:text="Create Schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/SunD" />

    <EditText
        android:id="@+id/MthSt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rectangle_layout"
        android:ems="10"
        android:hint="MM"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/DaySt"
        app:layout_constraintEnd_toStartOf="@+id/DaySt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DaySt"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
...
        android:ems="10"
        android:hint="DD"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/EndDate"
        app:layout_constraintEnd_toStartOf="@+id/YrSt"
        app:layout_constraintStart_toEndOf="@+id/MthSt"
        app:layout_constraintTop_toTopOf="@+id/startDate"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/YrSt"
...
        app:layout_constraintBaseline_toBaselineOf="@+id/DaySt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DaySt"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/MthEnd"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/rectangle_layout"
        android:ems="10"
        android:hint="MM"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintBaseline_toBaselineOf="@+id/DayEnd"
        app:layout_constraintEnd_toStartOf="@+id/DayEnd"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/DayEnd"
        android:layout_width="0dp"
...
